# heb-datathon

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  Makefile  README.md  pyproject.toml
data/: labels_synth_train.json  queries_synth_test.json  queries_synth_train.json
scripts/: aggregate_leaderboard.py
tamu25/: __init__.py  evaluate.py  metrics.py  validate.py
tamu25/cli/: main.py
teams/team_alpha/: submission.json
teams/team_bravo/: submission.json
teams/team_charlie/: submission.json
teams/team_delta/: submission.json
teams/team_echo/: submission.json
tests/: conftest.py  test_evaluate.py  test_validate.py
tests/data/: labels_real.json  labels_synth.json  products.json  queries_real.json  queries_synth.json
